application from railway

--- a/datablog/datablog/src/main/resources/application.properties
+++ b/datablog/datablog/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/datablog
+spring.datasource.url=jdbc:mysql://root:qeeEdXXHLdi0OmYbYoof@containers-us-west-39.railway.app:5673/railway
 spring.datasource.username=root
-spring.datasource.password=123456ASD
+spring.datasource.password=qeeEdXXHLdi0OmYbYoof
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=true
@@ -18,3 +18,5 @@ nahuel.openapi.prod-url=https://NO-NAME
 
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operations-sorter=method
+
+
