--- a/datablog/datablog/src/main/resources/application.properties
+++ b/datablog/datablog/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://root:qeeEdXXHLdi0OmYbYoof@containers-us-west-39.railway.app:5673/railway
+spring.datasource.url=jdbc:mysql://root:w5SkqibnEYMEwDkgjqAJ@containers-us-west-124.railway.app:5458/railway
 spring.datasource.username=root
-spring.datasource.password=qeeEdXXHLdi0OmYbYoof
+spring.datasource.password=w5SkqibnEYMEwDkgjqAJ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=true
