openapi swagger url with railway

--- a/datablog/datablog/src/main/resources/application.properties
+++ b/datablog/datablog/src/main/resources/application.properties
@@ -14,7 +14,7 @@ jwt.time.expiration=86400000
 
 
 nahuel.openapi.dev-url=http://localhost:8080
-nahuel.openapi.prod-url=https://NO-NAME
+nahuel.openapi.prod-url=https://outstanding-flower-production.up.railway.app
 
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operations-sorter=method
